fix(ai): clear final Java quality violations